Fixed scrolled up playlist while overflow bug

--- a/public/v2/components/Playlists.css
+++ b/public/v2/components/Playlists.css
@@ -21,6 +21,8 @@
 }
 
 menu {
+  background-color: white;
+  box-shadow: 1px 0px 8px #a9a9a94f;
   position: fixed;
   border-bottom: 3px solid #6f73ff;
   z-index: 1;
